<resources>
    <string name="app_name">GitHired?</string>
    <string name="placeholder_name">Doug Shook</string>
    <string name="placeholder_email">dshook@gmail.com</string>
    <string name="placeholder_uni">Washington University in St. Louis</string>
    <string name="placeholder_major">Computer Science</string>
    <string name="placeholder_gpa">GPA: 4.0</string>
    <string name="employee">Employee</string>
    <string name="employer">Employer</string>
    <string name="employer_profile">Employer Profile</string>
    <string name="employees">Employees</string>
    <string name="employers">Employers</string>
    <string name="liaison">Liaison</string>
    <string name="contact">Contact</string>
    <string name="create_a_job">Create a Job</string>
    <string name="company_name">Company Name</string>
    <string name="job_description">Job Description</string>
    <string name="job_title">Job Title</string>
    <string name="job_salary">Job Salary</string>
    <string name="job_education">Job Education</string>
    <string name="users_matches">User Matches</string>
    <string name="posting_matches">Posting Matches</string>
    <string name="postings">Postings: </string>
    <string name="position">Position</string>
    <string name="profile">Profile</string>
    <string name="qualifications">Qualifications</string>
    <string name="us_citizen">U.S. Citizen</string>
    <string name="current_student">Current Student</string>
    <string name="education">Education</string>
    <string name="university">University</string>
    <string name="major">Major</string>
    <string name="grad_year">2021</string>
    <string name="register_as_employee">Register as Employee</string>
    <string name="register_as_employer">Register as Employer</string>
    <string name="work_experience">Work Experience</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="description">Description</string>
    <string name="add_a_profile_section">Add a Profile Section</string>
    <string-array name="section_options">
        <!--        <item>Project</item>-->
        <item>Education</item>
        <item>Work Experience</item>
        <item>Technical Skill</item>
        <item>Hobby</item>
    </string-array>
    <string name="hobby_prompt">Enter a Hobby</string>
    <string name="submit">Submit</string>
    <string name="skill_prompt">Enter a Skill</string>
    <string name="company_prompt">Company</string>
    <string name="position_prompt">Position</string>
    <string name="from_prompt">Started</string>
    <string name="to_prompt">Ended</string>
    <string name="description_prompt">Position description</string>
    <string name="degree">Degree</string>
    <string name="gpa">GPA</string>
    <string name="graduation">Graduation</string>
    <string name="proficiency_propt">Proficiency</string>

    <string name="employee_match_item">You matched with:</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>


