<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mediumLight">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:layout_marginHorizontal="10dp"
    android:background="@drawable/profile_section"
    android:orientation="vertical"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toBottomOf="parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginVertical="10dp"
        android:textColor="@color/accentBlue"
        android:text="@string/add_a_profile_section"
        android:textSize="20sp"
        />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/section_spinner"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:id="@+id/input_contianer"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:isScrollContainer="true"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/hobby_input"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/hobby_prompt"
                android:textColorHint="@color/accentBlue"
                android:textColor="@color/mediumLight"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/skill_input"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/skill_prompt"
                android:inputType="text"
                android:textColorHint="@color/accentBlue"
                android:textColor="@color/mediumLight"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/work_input"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:visibility="visible">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company_prompt"
                android:inputType="text"
                android:textColorHint="@color/accentBlue"
                android:textColor="@color/mediumLight"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/position_prompt"
                android:inputType="text"
                android:textColorHint="@color/accentBlue"
                android:textColor="@color/mediumLight"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description_prompt"
                android:inputType="textLongMessage"
                android:textColorHint="@color/accentBlue"
                android:textColor="@color/mediumLight"/>
            <EditText
                android:id="@+id/work_input_first_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from_prompt"
                android:inputType="date"
                android:clickable="true"
                android:onClick="showDatePickerDialog"
                android:editable="false"
                android:textColorHint="@color/accentBlue"
                android:textColor="@color/mediumLight"/>
            <EditText
                android:id="@+id/work_input_last_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/to_prompt"
                android:inputType="date"
                android:clickable="true"
                android:editable="false"
                android:textColorHint="@color/accentBlue"
                android:textColor="@color/mediumLight"/>
        </LinearLayout>




        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:text="@string/submit"
            android:layout_gravity="center"
            android:background="@color/accentGreen"
            android:textColor="@color/dark"/>

    </LinearLayout>

</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>