<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.EmployerUI.CreateJobActivity">

    <LinearLayout
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:gravity="right"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="left"
            android:paddingLeft="10dp"
            android:text="GitEmployees"
            android:textColor="@color/accentBlue"
            android:textFontWeight="800"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:paddingRight="10dp"
            android:src="@drawable/powerwhite" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/dark"
            android:src="@drawable/settingswhite" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="57dp"
        android:layout_marginBottom="40dp"
        android:background="@color/mediumLight"
        android:orientation="vertical"
        android:paddingHorizontal="10dp"
        app:layout_constraintBottom_toTopOf="@+id/main_nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/create_a_job"
            android:textColor="@color/accentGreen"
            android:textSize="30sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/position" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/qualifications"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/us_citizen" />

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/current_student" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/job_description"
            android:minLines="1" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/main_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/dark"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/dark"
                android:src="@drawable/businesswhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:gravity="center"
                android:text="Profile"
                android:textColor="@color/light"
                android:textSize="10sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/dark"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/dark"
                android:src="@drawable/homewhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:gravity="center"
                android:text="Home"
                android:textColor="@color/light"
                android:textSize="10sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/dark"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/create_job_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/dark"
                android:src="@drawable/addblue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:gravity="center"
                android:text="Create Job"
                android:textColor="@color/light"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/dark"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/match_button"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/dark"
                android:src="@drawable/messagewhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-6dp"
                android:gravity="center"
                android:text="Matches"
                android:textColor="@color/light"
                android:textSize="10sp" />
        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>